<resources>
    <string name="app_name">aNota</string>
    <string name="domain">http://192.168.200.137:8000/</string>
    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_login">Entrar</string>
    <string name="action_recordar">Recordar</string>
    <string name="action_save">Guardar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_edit">Editar</string>
    <string name="action_move">Mover</string>
    <string name="action_share">Compartir</string>
    <string name="action_anotaciones">Ver anotaciones</string>
    <string name="error_invalid_usuario">El nombre de usuario es inválido</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>

    <string name="title_activity_login">Entrar</string>

    <!--Strings related to drawer-->
    <string name="drawer_header_text">Menú</string>
    <string name="nav_item_diario_clase">Mis asignaturas</string>
    <string name="nav_item_tutoria">Tutoría</string>
    <string name="nav_item_exit">Salir</string>
    <string name="nav_sub_menu">Centro</string>
    <string name="nav_sub_menu_profesorado">Profesorado</string>
    <string name="nav_sub_menu_grupos">Grupos</string>
    <string name="nav_sub_menu_asignaturas">Asignaturas</string>


    <!--Strings related to lists-->
    <string name="busqueda_grupo">Grupo:</string>
    <string name="asignatura_text">Asignatura</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="diario_clase">Diario de clase</string>
    <string name="tutoria_text">Tutoría</string>
    <string name="profesor_text">Profesor/a</string>
    <string name="profesorado">Profesorado</string>
    <string name="grupo_text">Grupo</string>
    <string name="grupos">Grupos</string>
    <string name="grupo_promt">Grupo:</string>
    <string name="last_name_text">Apellidos</string>
    <string name="first_name_text">Nombre</string>
    <string name="email_text">E-mail</string>
    <string name="email_prompt">E-mail:</string>
    <string name="admin_text">Administrador</string>
    <string name="alumno">Alumno/a</string>
    <string name="apellido1_text">Apellido 1</string>
    <string name="apellido2_text">Apellido 2</string>
    <string name="ap1_text">Primer apellido</string>
    <string name="ap2_text">Segundo apellido</string>
    <string name="nombre_alumno_text">Nombre</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="fecha_nac_prompt">Fecha de nacimiento:</string>
    <string name="edad_text">Edad</string>
    <string name="foto_alumno">Fotografía del alumno</string>
    <string name="logo_camara">Logo camara</string>
    <string name="logo_galeria">Logo galeria</string>
    <string name="eliminar_foto">Eliminar foto</string>
    <string name="impartidas">Asignaturas impartidas:</string>
    <string name="matriculadas">Asignaturas matriculadas:</string>
    <string name="listado_alumnos">Listado de alumnos/as:</string>
    <string name="disposicion_alumnos">Disposición del alumnado:</string>
    <string name="curso_text">Curso</string>
    <string name="unidad_text">Unidad</string>
    <string name="tutor_text">Tutor/a:</string>
    <string name="distribucion">Distribución:</string>
    <string name="num_alumnos">alumnos/as</string>
    <string name="num_alumnos_value">0</string>
    <string name="anotaciones">Anotaciones</string>
    <string name="fecha_inicio">Fecha de inicio:</string>
    <string name="fecha_fin">Fecha de fin:</string>

    <string name="fecha">"dd/MM/yyyy"</string>
    <string name="switch_falta">Falta:</string>
    <string name="switch_trabaja">Trabaja:</string>
    <string name="positivos_text">Positivos:</string>
    <string name="negativos_text">Negativos:</string>
    <string name="falta">Falta</string>
    <string name="trabaja">Trabaja</string>
    <string name="positivo">Positivo</string>
    <string name="negativo">Negativo</string>
    <string name="todos">Seleccionar todos</string>
    <string name="ninguno">Borrar selección</string>
    <string name="invertir">Invertir selección</string>



    <string name="action_settings">Preferencias</string>
    <string name="accion_mostrar">Mostrar Lugares</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_buscar">Buscar</string>
    <string name="accion_acercade">Acerca de ...</string>
    <string name="accion_acerca_de">Acerca de </string>
    <string name="accion_salir">Salir</string>
    <string name="titulo_nombre">Nombre:</string>
    <string name="hint_nombre">algo que identifique el lugar</string>
    <string name="titulo_tipo">Tipo:</string>
    <string name="titulo_direccion">Dirección:</string>
    <string name="hint_direccion">dirección del lugar</string>
    <string name="titulo_telefono">Telefono:</string>
    <string name="hint_telefono">teléfono para contactar</string>
    <string name="titulo_url">Url:</string>
    <string name="hint_url">página web</string>
    <string name="titulo_comentario">Comentario:</string>
    <string name="hint_comentario">introduce tus notas</string>
    <string name="acercade">Aplicación móvil para valorar el trabajo de clase del alumnado de un centro educativo.</string>
    <string name="title_activity_preferencias">Preferencias</string>

    <array name="dummy_items">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
    </array>

</resources>
