<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <TextView
        android:id="@+id/textViewAp1AlumnoDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/apellido1_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textViewAp2AlumnoDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/textViewAp1AlumnoDetail"
        android:layout_toEndOf="@id/textViewAp1AlumnoDetail"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/apellido2_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textViewSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/textViewAp2AlumnoDetail"
        android:layout_toEndOf="@id/textViewAp2AlumnoDetail"
        android:text=", "
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textViewNombreAlumnoDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/textViewSeparator"
        android:layout_toEndOf="@id/textViewSeparator"
        android:text="@string/nombre_alumno_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/imageViewAlumnoDetail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/textViewAp1AlumnoDetail"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/sinfoto"
        android:contentDescription="@string/foto_alumno" />

    <TextView
        android:id="@+id/textViewGrupoAlumnoDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewAlumnoDetail"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/grupo_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/textViewNacAlumnoDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textViewGrupoAlumnoDetail"
        android:layout_marginTop="5dp"
        android:text="@string/fecha_nac"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/textViewEmailAlumnoDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewNacAlumnoDetail"
        android:layout_marginTop="5dp"
        android:text="@string/email_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/textViewMatriculadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEmailAlumnoDetail"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/matriculadas"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <ListView
        android:id="@+id/listViewAsignaturasMatriculadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMatriculadas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
