<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">


    <Switch
        android:id="@+id/switchFalta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_falta" />

    <Switch
        android:id="@+id/switchTrabaja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_trabaja" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPositivos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/positivos_text" />

        <EditText
            android:id="@+id/editTextPositivos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textNegativos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/negativos_text" />

        <EditText
            android:id="@+id/editTextNegativos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:inputType="number" />
    </LinearLayout>


</LinearLayout>