<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <TextView
        android:id="@+id/textViewCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/curso_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewUnidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewCurso"
        android:layout_toEndOf="@+id/textViewCurso"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/unidad_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewTutorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewCurso"
        android:layout_marginTop="2dp"
        android:text="@string/tutor_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/textViewTutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewTutorText"
        android:layout_toEndOf="@+id/textViewTutorText"
        android:layout_below="@+id/textViewCurso"
        android:layout_alignBaseline="@+id/textViewTutorText"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="----"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/textViewNumAlumnosValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_alumnos_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewNumAlumnos"
        android:layout_toStartOf="@+id/textViewNumAlumnos"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_alignBaseline="@+id/textViewCurso"/>

    <TextView
        android:id="@+id/textViewNumAlumnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_alumnos"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@+id/textViewCurso"/>

</RelativeLayout>
